--- a/develop/views/homepage.handlebars
+++ b/develop/views/homepage.handlebars
@@ -1,23 +1,20 @@
 <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
+{{#each bikes as |bike| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/bicycles/{{bike.id}}">{{bike.title}}</a>
     </h2>
     <p>
-      <span for="img" aria-label="money">💲</span>
       <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
+      <span class="dollar-amount">{{bike.price}}</span>
     </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{bike.user.name}} on {{bike.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{bike.description}}
     </p>
   </div>
 </div>
