added handlebar connections to database to display bike information on bicycle.handlebars.

--- a/develop/views/homepage.handlebars
+++ b/develop/views/homepage.handlebars
@@ -7,7 +7,7 @@
         </h2>
         <img class="card-img" src="https://mbaction.com/wp-content/uploads/2019/06/GaryFisher_June1989_4mb.jpg">
         <div class="teamStatsTable">
-            <div class="nba-title">Price: {{bike.price}}</div>
+            <div class="nba-title">Price: ${{bike.price}}</div>
             
             <table>
                 <tr>
