pushing changes to profile.handlebars to more closely relate to our project.

--- a/develop/views/profile.handlebars
+++ b/develop/views/profile.handlebars
@@ -6,20 +6,48 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Post a Bicycle for Sale:</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="post-title">Post Title:</label>
+        <input class="form-input" type="text" id="post-title" name="post-title" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
+        <label for="selling-price">Selling Price ($):</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
       </div>
       <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+        <label for="post-desc">Description:</label>
+        <textarea class="form-input" id="post-desc" name="post-desc"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Bike Type:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Bike Brand:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Frame Size:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Wheel Size:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Color:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Condition:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
+      </div>
+      <div class="form-group">
+        <label for="selling-price">Your Zipcode:</label>
+        <input class="form-input" type="number" id="selling-price" name="selling-price" />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
