--- a/develop/views/bicycle.handlebars
+++ b/develop/views/bicycle.handlebars
@@ -1,7 +1,7 @@
 <div class="text-center">
   <h2>{{title}}</h2>
   <p><span class="dollar-amount">${{price}}</span></p>
-  <img class="card-img" src="https://mbaction.com/wp-content/uploads/2019/06/GaryFisher_June1989_4mb.jpg">
+  <img class="card-img" src="{{image}}">
   <p>{{description}}</p>
   <p>Posted by {{user.name}} on {{format_date date_created}}</p>
   
