--- a/develop/views/homepage.handlebars
+++ b/develop/views/homepage.handlebars
@@ -5,7 +5,7 @@
         <h2>
           <a href="/bicycles/{{bike.id}}">{{bike.title}}</a>
         </h2>
-        <img class="card-img" src="https://mbaction.com/wp-content/uploads/2019/06/GaryFisher_June1989_4mb.jpg">
+        <img class="card-img" src="{{bike.image}}">
         <div class="teamStatsTable">
             <div class="nba-title">Price: ${{bike.price}}</div>
             
