added filter html, css, js

--- a/develop/public/css/style.css
+++ b/develop/public/css/style.css
@@ -248,4 +248,20 @@ h5 {
         width: 60%;
         height: auto;
     }
+    .loader-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        z-index: 998;
+      }
+      .loader-overlay .preloader-wrapper {
+        position: fixed;
+        top: 50%;
+      }
   }
