--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,8 +4,8 @@
   </div>
 </div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
+<div class="">
+  <div class="">
     <h3>List a Bicycle for Sale:</h3>
 
     <form class="form new-bicycle-form">
