--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <!-- Loop over each object in the projects array -->
 {{#each bikes as |bike| }}
 
-<div class="card section-bikeProfile">
+<div class="bikeCard">
         <h2>
           <a href="/bicycles/{{bike.id}}">{{bike.title}}</a>
         </h2>
