--- a/views/bicycle.handlebars
+++ b/views/bicycle.handlebars
@@ -6,6 +6,6 @@
   <p>Posted by {{user.name}} on {{format_date date_created}}</p>
   
   <p>
-    <button class="btn btn-primary">Inquire</button>
+    <a href="mailto:seller@bikr.com?subject=Bikr - {{title}}"><button class="btn btn-primary">Inquire</button></a>
   </p>
 </div>
