--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,17 @@
-<!-- Loop over each object in the projects array -->
-{{#each bikes as |bike| }}
-
-<div class="bikeCard">
+<div class="homepageContainer">
+    <img src="images/homepage-bikers.jpg" style="width:100%;">
+    <div class="containerClass">
+        <h1>Recent Postings</h1>
+    </div>
+    <!-- Loop over each object in the projects array -->
+    {{#each bikes as |bike| }}
+    <div class="bikeCard">
         <h2>
-          <a href="/bicycles/{{bike.id}}">{{bike.title}}</a>
+            <a href="/bicycles/{{bike.id}}">{{bike.title}}</a>
         </h2>
         <img class="card-img" src="{{bike.image}}">
-        <div class="teamStatsTable">
-            <div class="nba-title">Price: ${{bike.price}}</div>
-            
+        <div class="bikeStatsTable">
+            <div class="listing-title">Price: ${{bike.price}}</div>
             <table>
                 <tr>
                     <td class="statsKeyTitle">Posted by: {{bike.user.name}} on {{format_date bike.date_created}}</td>
@@ -18,4 +21,11 @@
                 </tr>
             </table>
         </div>
-{{/each}}
+    </div>
+    {{/each}}
+</div>
+
+
+
+
+
