--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 <body>
   <header class="containerClass; width: 100%">
       <!-- logo will be displayed at the left side of the header -->
-      <a href="/"><img src="images/bikr-logo-long-red.png" style="max-width:150px; padding: 10px; float: left;"></a>
+      <a href="/"><img src="https://res.cloudinary.com/dvubxzx4h/image/upload/v1621080507/bikr-logo-long-red_n3vfku.png" style="max-width:150px; padding: 10px; float: left;"></a>
       <!-- login/logout buttons will be displayed at the right of the screen -->
       <nav style="display:flex; flex-direction: row;">
         <!-- Conditionally render login or logout links -->
