--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <div class="homepageContainer">
-    <img src="images/homepage-bikers.jpg" style="width:100%;">
+    <img src="images/homepage-bikers.jpg" style="width:90%">
     <div class="containerClass">
         <h1>Recent Postings</h1>
     </div>
