--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikr - The place to buy and sell bicycles across NYC</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="containerClass; width: 100%">
       <!-- logo will be displayed at the left side of the header -->
-      <a href="/"><img src="https://res.cloudinary.com/dvubxzx4h/image/upload/v1621080507/bikr-logo-long-red_n3vfku.png" style="max-width:150px; padding: 10px; float: left;"></a>
+      <a href="/"><img src="images/bikr-logo-long-red.png" style="max-width:150px; padding: 10px; float: left;"></a>
       <!-- login/logout buttons will be displayed at the right of the screen -->
-      <nav style="display:flex; flex-direction: row;">
+      <nav style="float: right;">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <button><a href="/profile">profile</a></button> |
-        <button id="logout">logout</button>
+        <button><a href="/profile">My Profile</a></button> |
+        <button id="logout">Log Out</button>
         {{else}}
-        <a class="button" href="/login">login</a>
+        <button><a class="button" href="/login">Sign In</a></button>
         {{/if}}
       </nav>
   </header>
