--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,43 +1,43 @@
 <div class="containerClass">
-  <div class="">
+  <div class="innercontainerClass">
 
     <h2>Login</h2>
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label style="float: left;" for="email-login">email:</label>
+        <input style="width: 350px; float: right;" class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label style="float: left;" for="password-login">password:</label>
+        <input style="width: 350px; float: right;" class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Sign In</button>
       </div>
     </form>
   </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
+  <div class="innercontainerClass">
+    <h2>Register</h2>
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <label style="float: left;" for="name-signup">name:</label>
+        <input style="width: 350px; float: right;" class="form-input" type="text" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label style="float: left;" for="email-signup">email:</label>
+        <input style="width: 350px; float: right;" class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <label style="float: left;" for="password-signup">password:</label>
+        <input style="width: 350px; float: right;" class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
       </div>
     </form>
   </div>
 </div>
+
 
 <script src="./js/login.js"></script>
