--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,143 +1,145 @@
-<div class="containerClass">
+<main style="width: 800px;">
+  <div style="width:100%;" class="containerClass">
     <h2>Welcome, {{name}}!</h2>
-</div>
-<div style="width:93%;" class="containerClass">
-  <div class="">
-    <h3>List a Bicycle for Sale:</h3>
-    <form class="form new-bicycle-form">
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="post-title">Listing Title:</label>
-        <input style="width: 65%; float: right;" class="form-input" type="text" id="post-title" name="post-title" />
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="selling-price">Selling Price ($):</label>
-        <input style="width: 65%; float: right;" class="form-input" type="number" id="selling-price" name="selling-price" />
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="post-desc">Description:</label>
-        <textarea style="width: 65%; float: right;" class="form-input" id="post-desc" name="post-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="bike-type">Bicycle Type:</label>
-        <select style="width: 65%; float: right;" id="bike-type" name="bike-type">
-          <option value="mountain-bike">Mountain Bicycle</option>
-          <option value="city-bike">City Bicycle</option>
-          <option value="street-bike">Street Bycicle</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="bike-brand">Bike Brand:</label>
-        <input style="width: 65%; float: right;" class="form-input" type="text" id="bike-brand" name="bike-brand" />
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="frame-size">Frame Size:</label>
-        <select style="width: 65%; float: right;" id="frame-size" name="frame-size">
-          <option value="frame-size-1">13-15"</option>
-          <option value="frame-size-2">15-16"</option>
-          <option value="frame-size-3">16-17"</option>
-          <option value="frame-size-4">17-19"</option>
-          <option value="frame-size-5">19-21"</option>
-          <option value="frame-size-6">21"</option>
-          <option value="frame-size-7">Other</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="wheel-size">Wheel Size:</label>
-        <select style="width: 65%; float: right;" id="wheel-size" name="wheel-size">
-          <option value="wheel-size-1">16"</option>
-          <option value="wheel-size-2">20"</option>
-          <option value="wheel-size-3">24"</option>
-          <option value="wheel-size-4">26"</option>
-          <option value="wheel-size-5">27.5"</option>
-          <option value="wheel-size-6">29"</option>
-          <option value="wheel-size-7">32"</option>
-          <option value="wheel-size-8">Other</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="bike-color">Color:</label>
-        <input style="width: 65%; float: right;" class="form-input" type="text" id="bike-color" name="bike-color" /> 
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="bike-condition">Condition:</label>
-        <select style="width: 65%;" id="bike-condition" name="bike-condition">
-          <option value="bike-condition-1">New</option>
-          <option value="bike-condition-2">Like New</option>
-          <option value="bike-condition-3">Used</option>
-          <option value="bike-condition-4">For Parts</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label style="width: 35%; float: left;" for="zipcode">Your Zipcode:</label>
-        <input style="width: 65%; float: right;" class="form-input" type="text" id="zipcode" name="zipcode" />
-      </div>
-      <div>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary" data-userid="{{usersPosts.id}}">List on Bikr</button>
-      </div>
-    </form>
-    <button id="upload_widget" class="cloudinary-button">Upload files</button>
-    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-    <script type="text/javascript">  
-    async function uploadImage(result) {
-      console.log("uploadImage test: ", result.secure_url);
-        const response = await fetch('/api/bicycles/:id/uploadImage', {
-          method: 'PATCH',
-          body: { "image": result.secure_url },
-          headers: { 'Content-Type': 'multipart/form-data' },
-        });
-    if (response.ok) {
-      console.log(response);
-    } else {
-      alert(response.statusText);
-    }
-    }
-    var myWidget = cloudinary.createUploadWidget({
-      cloudName: 'dvubxzx4h', 
-      uploadPreset: 'oux1btn7'}, (error, result) => { 
-        if (!error && result && result.event === "success") { 
-          console.log('Done! Here is the image info: ', result.info);
-          uploadImage(result.info); 
+  </div>
+  <div style="width:100%;" class="containerClass">
+    <div>
+      <h3>List a Bicycle for Sale:</h3>
+      <form class="form new-bicycle-form">
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="post-title">Listing Title:</label>
+          <input style="float:right; width:50%;" class="form-input" type="text" id="post-title" name="post-title" />
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="selling-price">Selling Price ($):</label>
+          <input style="float:right; width:50%;" class="form-input" type="number" id="selling-price"
+            name="selling-price" />
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="post-desc">Description:</label>
+          <textarea style="float:right; width:50%;" class="form-input" id="post-desc" name="post-desc"></textarea>
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="bike-type">Bicycle Type:</label>
+          <select style="float:right; width:50%;" id="bike-type" name="bike-type">
+            <option value="mountain-bike">Mountain Bicycle</option>
+            <option value="city-bike">City Bicycle</option>
+            <option value="street-bike">Street Bycicle</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="bike-brand">Bike Brand:</label>
+          <input style="float:right; width:50%;" class="form-input" type="text" id="bike-brand" name="bike-brand" />
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="frame-size">Frame Size:</label>
+          <select style="float:right; width:50%;" id="frame-size" name="frame-size">
+            <option value="frame-size-1">13-15"</option>
+            <option value="frame-size-2">15-16"</option>
+            <option value="frame-size-3">16-17"</option>
+            <option value="frame-size-4">17-19"</option>
+            <option value="frame-size-5">19-21"</option>
+            <option value="frame-size-6">21"</option>
+            <option value="frame-size-7">Other</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="wheel-size">Wheel Size:</label>
+          <select style="float:right; width:50%;" id="wheel-size" name="wheel-size">
+            <option value="wheel-size-1">16"</option>
+            <option value="wheel-size-2">20"</option>
+            <option value="wheel-size-3">24"</option>
+            <option value="wheel-size-4">26"</option>
+            <option value="wheel-size-5">27.5"</option>
+            <option value="wheel-size-6">29"</option>
+            <option value="wheel-size-7">32"</option>
+            <option value="wheel-size-8">Other</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="bike-color">Color:</label>
+          <input style="float:right; width:50%;" class="form-input" type="text" id="bike-color" name="bike-color" />
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="bike-condition">Condition:</label>
+          <select style="float:right; width:50%;" id="bike-condition" name="bike-condition">
+            <option value="bike-condition-1">New</option>
+            <option value="bike-condition-2">Like New</option>
+            <option value="bike-condition-3">Used</option>
+            <option value="bike-condition-4">For Parts</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label style="float:left; width:50%;" for="zipcode">Your Zipcode:</label>
+          <input style="float:right; width:50%;" class="form-input" type="text" id="zipcode" name="zipcode" />
+        </div>
+        <div>
+        </div>
+      </form>
+      <button type="submit" class="btn btn-primary" data-userid="{{usersPosts.id}}">List on Bikr</button>
+      <button id="upload_widget" class="cloudinary-button">Upload files</button>
+      <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+      <script type="text/javascript">
+        async function uploadImage(result) {
+          console.log("uploadImage test: ", result.secure_url);
+          const response = await fetch('/api/bicycles/:id/uploadImage', {
+            method: 'PATCH',
+            body: { "image": result.secure_url },
+            headers: { 'Content-Type': 'multipart/form-data' },
+          });
+          if (response.ok) {
+            console.log(response);
+          } else {
+            alert(response.statusText);
+          }
         }
-      }
-    )
-    document.getElementById("upload_widget").addEventListener("click", function(){
-        myWidget.open();
-      }, false);
-    </script>
-    <script type="text/javascript">
-    var generateSignature = function(callback, params_to_sign){
-      $.ajax({
-       url     : "https://www.my-domain.com/my_generate_signature",
-       type    : "GET",
-       dataType: "text",
-       data    : { data: params_to_sign},
-       complete: function() {console.log("complete")},
-       success : function(signature, textStatus, xhr) { callback(signature); },
-       error   : function(xhr, status, error) { console.log(xhr, status, error); }
-      });
-    }
-    cloudinary.applyUploadWidget(document.getElementById('upload_widget_opener'), 
-    { api_key : "994225174582381", cloudName: "dvubxzx4h", uploadSignature: generateSignature }, 
-    (error, result) => { });
-  </script>
-  </div>
-  {{#if bikes.length}}
-  <div class="innercontainerClass">
-    <h3>Your Listed Bicycles:</h3>
-    {{#each bikes as |bike|}}
-    <div class="">
-      <div class="">
-        <h4><a href="/bicycles/{{bike.id}}">{{bike.title}}</a></h4>
-      </div>
-      <div class="">
-        <button class="btn btn-sm btn-danger" data-id="{{bike.id}}">DELETE</button>
-      </div>
+        var myWidget = cloudinary.createUploadWidget({
+          cloudName: 'dvubxzx4h',
+          uploadPreset: 'oux1btn7'
+        }, (error, result) => {
+          if (!error && result && result.event === "success") {
+            console.log('Done! Here is the image info: ', result.info);
+            uploadImage(result.info);
+          }
+        }
+        )
+        document.getElementById("upload_widget").addEventListener("click", function () {
+          myWidget.open();
+        }, false);
+      </script>
+      <script type="text/javascript">
+        var generateSignature = function (callback, params_to_sign) {
+          $.ajax({
+            url: "https://www.my-domain.com/my_generate_signature",
+            type: "GET",
+            dataType: "text",
+            data: { data: params_to_sign },
+            complete: function () { console.log("complete") },
+            success: function (signature, textStatus, xhr) { callback(signature); },
+            error: function (xhr, status, error) { console.log(xhr, status, error); }
+          });
+        }
+        cloudinary.applyUploadWidget(document.getElementById('upload_widget_opener'),
+          { api_key: "994225174582381", cloudName: "dvubxzx4h", uploadSignature: generateSignature },
+          (error, result) => { });
+      </script>
     </div>
-    {{/each}}
+    {{#if bikes.length}}
+    <div class="innercontainerClass">
+      <h3>Your Listed Bicycles:</h3>
+      {{#each bikes as |bike|}}
+      <div class="">
+        <div class="">
+          <h4><a href="/bicycles/{{bike.id}}">{{bike.title}}</a></h4>
+        </div>
+        <div class="">
+          <button class="btn btn-sm btn-danger" data-id="{{bike.id}}">DELETE</button>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+    {{/if}}
   </div>
-  {{/if}}
-</div>
+</main>
 <script src="./js/profile.js"></script>
