--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -75,58 +75,65 @@
           <input style="float:right; width:50%;" class="form-input" type="text" id="zipcode" name="zipcode" />
         </div>
         <div>
+          <button type="submit" class="btn btn-primary" data-userid="{{usersPosts.id}}">List on Bikr</button>
+        </div>
+        <div>
+          <button id="upload_widget" class="cloudinary-button">Upload image</button>
         </div>
       </form>
-      <button type="submit" class="btn btn-primary" data-userid="{{usersPosts.id}}">List on Bikr</button>
-      <button id="upload_widget" class="cloudinary-button">Upload files</button>
-      <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-      <script type="text/javascript">
-        async function uploadImage(result) {
-          console.log("uploadImage test: ", result.secure_url);
-          const response = await fetch('/api/bicycles/:id/uploadImage', {
-            method: 'PATCH',
-            body: { "image": result.secure_url },
-            headers: { 'Content-Type': 'multipart/form-data' },
-          });
-          if (response.ok) {
-            console.log(response);
-          } else {
-            alert(response.statusText);
-          }
-        }
-        var myWidget = cloudinary.createUploadWidget({
-          cloudName: 'dvubxzx4h',
-          uploadPreset: 'oux1btn7'
-        }, (error, result) => {
-          if (!error && result && result.event === "success") {
-            console.log('Done! Here is the image info: ', result.info);
-            uploadImage(result.info);
-          }
-        }
-        )
-        document.getElementById("upload_widget").addEventListener("click", function () {
-          myWidget.open();
-        }, false);
-      </script>
-      <script type="text/javascript">
-        var generateSignature = function (callback, params_to_sign) {
-          $.ajax({
-            url: "https://www.my-domain.com/my_generate_signature",
-            type: "GET",
-            dataType: "text",
-            data: { data: params_to_sign },
-            complete: function () { console.log("complete") },
-            success: function (signature, textStatus, xhr) { callback(signature); },
-            error: function (xhr, status, error) { console.log(xhr, status, error); }
-          });
-        }
-        cloudinary.applyUploadWidget(document.getElementById('upload_widget_opener'),
-          { api_key: "994225174582381", cloudName: "dvubxzx4h", uploadSignature: generateSignature },
-          (error, result) => { });
-      </script>
+      
     </div>
+  
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <script type="text/javascript">
+
+      async function uploadImage(result) {
+        console.log("uploadImage test: ", result.secure_url);
+        const response = await fetch('/api/bicycles/:id/uploadImage', {
+          method: 'PATCH',
+          body: { "image": result.secure_url },
+          headers: { 'Content-Type': 'multipart/form-data' },
+        });
+        if (response.ok) {
+          console.log(response);
+        } else {
+          alert(response.statusText);
+        }
+      }
+
+      var myWidget = cloudinary.createUploadWidget({
+        cloudName: 'dvubxzx4h',
+        uploadPreset: 'oux1btn7'
+      }, (error, result) => {
+        if (!error && result && result.event === "success") {
+          console.log('Done! Here is the image info: ', result.info);
+          uploadImage(result.info);
+        }
+      })
+          
+      document.getElementById("upload_widget").addEventListener("click", function () {
+        myWidget.open();
+      }, false);
+
+      var generateSignature = function (callback, params_to_sign) {
+        $.ajax({
+          url: "https://www.my-domain.com/my_generate_signature",
+          type: "GET",
+          dataType: "text",
+          data: { data: params_to_sign },
+          complete: function () { console.log("complete") },
+          success: function (signature, textStatus, xhr) { callback(signature); },
+          error: function (xhr, status, error) { console.log(xhr, status, error); }
+        });
+      }
+
+      cloudinary.applyUploadWidget(document.getElementById('upload_widget_opener'),
+        { api_key: "994225174582381", cloudName: "dvubxzx4h", uploadSignature: generateSignature },
+        (error, result) => { });
+    </script>
+
     {{#if bikes.length}}
-    <div class="innercontainerClass">
+    <div class="innercontainerClass bicycle-list">
       <h3>Your Listed Bicycles:</h3>
       {{#each bikes as |bike|}}
       <div class="">
