--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -77,9 +77,9 @@
         <div>
           <button type="submit" class="btn btn-primary" data-userid="{{usersPosts.id}}">List on Bikr</button>
         </div>
-        <div>
+        {{!-- <div>
           <button id="upload_widget" class="cloudinary-button">Upload image</button>
-        </div>
+        </div> --}}
       </form>
       
     </div>
