--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,9 +27,11 @@ body {
     background-repeat: repeat;
     font-family: 'Montserrat', sans-serif;
 }
+
 footer {
     background-color: white;
 }
+
 button {
     width: fit-content;
     background-color:firebrick;
@@ -40,6 +42,7 @@ button {
     font-family: 'Kanit', sans-serif;
     font-size: 20px;
 }
+
 .containerClass {
     display: flex;
     flex-direction: column;
@@ -52,7 +55,9 @@ button {
     margin-top:10px;
     font-family: 'Montserrat', sans-serif;
     box-shadow: 2px 2px 2px 2px #bdbdbd;
+    align-items: center;
 }
+
 .innercontainerClass {
     display: flex;
     flex-direction: column;
@@ -65,9 +70,11 @@ button {
     font-family: 'Kanit', sans-serif;
     box-shadow: 2px 2px 2px 2px #bdbdbd;
 }
+
 .homepageContainer {
     width: 90%;
 }
+
 .bikeCard {
     display:flex;
     justify-content: center;
@@ -81,10 +88,12 @@ button {
     font-family: 'Kanit', sans-serif;
     margin: 20px 0;
 }
+
 /*///adds animation to bike card///*/
 .bikeCard:hover {
     transform: translate(0, -20px);
 }
+
 .new-bicycle-form {
     width: 70%;
     color:dimgray;
