--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,9 @@
 </head>
 <body>
   <header class="containerClass; width: 100%">
-      <!-- logo will be displayed at the left side of the header -->
+      <!-- Logo will be displayed at the left side of the header -->
       <a href="/"><img src="https://res.cloudinary.com/dvubxzx4h/image/upload/v1621080507/bikr-logo-long-red_n3vfku.png" style="max-width:150px; padding: 10px; float: left;"></a>
-      <!-- login/logout buttons will be displayed at the right of the screen -->
+      <!-- Login/logout buttons will be displayed at the right of the screen -->
       <nav style="float: right;">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
